New key added and driver card retouched

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
       rel="stylesheet"
     />
     <title>Qevla Backend Dashboard</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2mxqXc5Bqo_WtJeZOdofiX7m5nzN65kM"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAgGS8CURJx0fgODBZ0kvw9YkMgC8zccXU"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2mxqXc5Bqo_WtJeZOdofiX7m5nzN65kM"></script> -->
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
